[package]
name = "ruth"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.1"
generational-arena = "0.2.8"
thiserror = "1.0.26"
ariadne = "0.1.3"
strum = { version = "0.21.0", features = ["derive"] }
derivative = "2.2.0"
nonempty = "0.7.0"
