[package]
name = "please"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = "0.6.1"
thiserror = "1.0.26"
ariadne = "0.1.3"
derivative = "2.2.0"
gc = { version = "0.4.1", features = ["derive"] }
termwiz = "0.13.0"
pico-args = "0.4.2"
itertools = "0.10.1"
paste = "1.0.5"
anyhow = "1.0.43"
hashable = "0.0.0"

[profile.dev]
opt-level = 3

[profile.dev.package.'*']
opt-level = 3
